<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">nimbits</string>
    <string name="base_url_setting">base_url_setting</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="base_url">http://nimbits-02.appspot.com</string>
    <string name="new_text">New</string>
    <string name="enter_data">Enter Data</string>
    <string name="dots">...</string>
    <string name="use_gps">Use GPS when entering data</string>
    <string name="confirm_delete">Are you sure you want to delete this entity, including all of its children and
        recorded data? You will not be able to undo this operation!
    </string>
    <string name="base_url_label">Base URL for Nimbits Instance</string>
    <string name="select_entity_type">Select Entity Type</string>
    <string name="select_setting_option">Select Setting Option</string>
    <string name="name">Name</string>
    <string name="alert_info">This data point can go into several states of "alert" when a new value is recorded. You
        can receive notifications of this alert state by creating a subscription to this point.
    </string>
    <string name="unit">Unit of Measurement</string>
    <string name="point_type">Point Type</string>
    <string name="basic_point_type">basic</string>
    <string name="cumulative_point_type">cumulative</string>
    <string name="timespan_point_type">timespan</string>
    <string name="current_value">Last:</string>
    <string name="record_success">Value recorded to the cloud</string>
    <string name="status_label">status:</string>
    <string name="default_status">idle</string>
    <string name="help_alerts">When a data point records a new value goes to long without doing so, the point can go
        into an "alert state" based on these settings. You can be notified in many ways by creating subscriptions to
        this point.
    </string>
    <string name="alert_high">High Alert</string>
    <string name="enabled">enabled</string>
    <string name="alert_low">Low Alert</string>
    <string name="alert_idle">Idle Alert - the number of seconds without receiving a new value before going into alert
        state
    </string>
    <string name="alert_delta">Delta Alert - triggered when a value changes by an amount based on a value in its
        history
    </string>
    <string name="alert_delta_seconds">Seconds of history to look back to</string>
    <string name="send">send</string>
    <string name="clear">clear</string>


    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From Nimbits:: device successfully registered (regId = %1$s)!</string>
    <string name="gcm_unregistered">From Nimbits:: device successfully unregistered!</string>
    <string name="gcm_message">From Nimbits:: you got message!</string>
    <string name="gcm_error">From Nimbits:: error (%1$s).</string>
    <string name="gcm_recoverable_error">From Nimbits:: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From Nimbits:: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="loading">...</string>
    <string name="zero">0</string>
    <string name="sample_text">Sample Text</string>
    <string name="sample_number">0.0000</string>
    <string name="sample_date">n/a</string>
    <string name="enter_name">New Name</string>
    <string name="new_folder_text">New Folder</string>
    <string name="new_point_text">New Data Point</string>
    <string name="options_refresh">Refresh</string>
    <string name="refresh_text">Refresh</string>
    <string name="authenticating">Authenticating...</string>
    <string name="nimbits_logo">nimbits logo</string>
    <string name="instance_text">Server URL</string>
    <string name="connect">Connect</string>
    <string name="add_instance">Add Instance</string>
    <string name="delete"/><string name="instance_editor_title">Nimbits Instance Connection</string>
    <string name="instance_editor_help">Connect to an instance of Nimbits Server.  If you setup a new server, you'll need to set the API KEY server setting and enter that key here.</string>

    <string name="server_url">Sever URL (eg yournimbits.appspot.com  192.168.1.101:8080)</string>

</resources>
