<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_new_folder"

        android:showAsAction="collapseActionView"
        android:icon="@drawable/content_new"
        android:title="@string/new_folder_text"/>

    <item
        android:id="@+id/action_new_point"

        android:showAsAction="collapseActionView"
        android:icon="@drawable/folder"
        android:title="@string/new_point_text"/>

    <item
        android:id="@+id/action_refresh"

        android:showAsAction="always"
        android:icon="@drawable/navigation_refresh"
        android:title="@string/refresh_text"/>

    <item
        android:id="@+id/action_expand"

        android:showAsAction="always"
        android:icon="@drawable/av_full_screen"
        android:title="@string/refresh_text"/>

</menu>