<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit"
            android:id="@+id/textView"
            android:layout_gravity="center|left"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/unit"
            android:layout_gravity="center|left"
            android:singleLine="true"
            android:maxLines="1"/>

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:id="@id/point_type">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_type"
                android:id="@+id/textView1"
                android:layout_gravity="left|center_vertical"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basic_point_type"
                android:id="@+id/basic_point_type"/>

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/cumulative_point_type"
                android:id="@+id/cumulative_point_type"/>

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/timespan_point_type"
                android:id="@+id/cumulative_point_type"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/save_button"
                android:layout_gravity="center_vertical|bottom|right"
                android:src="@android:drawable/ic_menu_save"
                android:focusableInTouchMode="false"/>

        </RadioGroup>
    </LinearLayout>


</FrameLayout>