<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_alerts"
        android:id="@id/help_alerts"
        android:layout_gravity="left|center_vertical"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:src="@drawable/redstar"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_high"
            android:id="@+id/textView"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/alert_high_value"
            android:layout_gravity="center_horizontal|top"
            android:singleLine="true"
            android:numeric="decimal"
            android:minWidth="100dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enabled"
            android:id="@id/alert_high_enabled"
            android:layout_gravity="center_horizontal|top"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:src="@drawable/bluestar"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_low"
            android:id="@+id/textView"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/alert_low_value"
            android:layout_gravity="center_horizontal|top"
            android:singleLine="true"
            android:numeric="decimal"
            android:minWidth="100dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enabled"
            android:id="@id/alert_low_enabled"
            android:layout_gravity="center_horizontal|top"/>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:src="@drawable/yellowstar"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_idle"
            android:id="@+id/textView"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/alert_idle_value"
            android:layout_gravity="center_horizontal|top"
            android:singleLine="true"
            android:numeric="integer"
            android:minWidth="100dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enabled"
            android:id="@id/alert_idle_enabled"
            android:layout_gravity="center_horizontal|top"/>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:src="@drawable/yellowstar"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_delta"
            android:id="@+id/textView"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/alert_delta_value"
            android:layout_gravity="center_horizontal|top"
            android:singleLine="true"
            android:minWidth="100dp"
            android:numeric="decimal"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enabled"
            android:id="@id/alert_delta_enabled"
            android:layout_gravity="center_horizontal|top"/>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/alert_delta_seconds"
            android:layout_gravity="center_horizontal|top"
            android:singleLine="true"
            android:numeric="integer"
            android:minWidth="100dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_delta_seconds"
            android:id="@+id/textView"
            android:layout_gravity="center"/>
    </LinearLayout>

    <ImageButton
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:id="@+id/save_button"
        android:src="@android:drawable/ic_menu_save"
        android:layout_marginTop="27dp"
        android:layout_gravity="bottom|right"/>


</LinearLayout>